--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:kava-components": "ng build components",
+    "build:kava-components:watch": "ng build components --watch",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run components:storybook"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +30,18 @@
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
     "@compodoc/compodoc": "^1.1.21",
+    "@storybook/manager-api": "^7.1.1",
+    "@storybook/theming": "^7.1.1",
+    "@storybook/addon-docs": "^7.1.1",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-interactions": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-styling": "^1.3.5",
+    "@storybook/angular": "^7.1.1",
+    "@storybook/blocks": "^7.1.1",
+    "@storybook/testing-library": "^0.2.0",
     "@types/jasmine": "~4.3.0",
+    "css-loader": "^6.8.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -35,6 +49,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^16.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.1.1",
     "typescript": "~5.1.3"
   }
 }
