--- a/projects/components/package.json
+++ b/projects/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "kava-components",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.1.0",
