--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.1.1",
+    "storybook-addon-themes": "^6.1.0",
     "typescript": "~5.1.3"
   }
 }
